--- a/scormcontent/index.html
+++ b/scormcontent/index.html
@@ -7,9 +7,9 @@
 
     <title>Business Succession Planning </title>
 
-    <link type="text/css" rel="stylesheet" href="lib/icomoon.css">
-    <script type="text/javascript" src="lib/player-0.0.11.min.js"></script>
-    <script type="text/javascript" src="lib/lzwcompress.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://oasisc-maker.github.io/Business_Succession_Planning/scormcontent/lib/icomoon.css">
+    <script type="text/javascript" src="https://oasisc-maker.github.io/Business_Succession_Planning/scormcontent/lib/player-0.0.11.min.js"></script>
+    <script type="text/javascript" src="https://oasisc-maker.github.io/Business_Succession_Planning/scormcontent/lib/lzwcompress.js"></script>
 
     <!-- Resize Hack -->
     <script type="text/javascript">
@@ -21,11 +21,11 @@
     <![endif]-->
 
     <script id="__ENTRY__" type="application/json">
-      {".js":["rise/cac37931.js"]}
+      {".js":["https://oasisc-maker.github.io/Business_Succession_Planning/scormcontent/lib/rise/cac37931.js"]}
     </script>
 
     <script id="__REMOTE_ENTRIES__" type="application/json">
-      {"mondrian":{".js":["mondrian/entry.js"]}}
+      {"mondrian":{".js":["https://oasisc-maker.github.io/Business_Succession_Planning/scormcontent/lib/mondrian/entry.js"]}}
     </script>
 
     <script>
@@ -511,11 +511,11 @@ function reportScore(score) {
 }
 
 function resolvePath(path) {
-  return ('assets/').concat(path);
+  return ('https://oasisc-maker.github.io/Business_Succession_Planning/scormcontent/assets/').concat(path);
 }
 
 function resolveFontPath(font) {
-  return ('lib/fonts/').concat(font.key.split('/').reverse()[0]);
+  return ('https://oasisc-maker.github.io/Business_Succession_Planning/scormcontent/lib/fonts/').concat(font.key.split('/').reverse()[0]);
 }
 
 function setLessonProgress(lessonProgress) {
